spacing fix

--- a/scss/wp-bootstrap4.scss
+++ b/scss/wp-bootstrap4.scss
@@ -224,14 +224,14 @@ a img.alignleft {
 		.main-menu,
 		.feature,
 		.widget-home {
-			padding-bottom: $spacer-y;
+			margin-bottom: $spacer-y;
 		}
 
 		.main { }
 
 		.footbar,
 		.footing {
-			padding-top: $spacer-y;
+			margin-top: $spacer-y;
 		}
 	}
 }
